removing unused sections

--- a/index.html
+++ b/index.html
@@ -247,10 +247,9 @@
             <!-- end product section -->
 
             <!-- cart banner section -->
-            <section class="cart-banner pt-100 pb-100">
+            <!-- <section class="cart-banner pt-100 pb-100">
                 <div class="container">
                     <div class="row clearfix">
-                        <!--Image Column-->
                         <div class="image-column col-lg-6">
                             <div class="image">
                                 <div class="price-box">
@@ -263,12 +262,12 @@
                                 <img src="assets/img/a.jpg" alt="">
                             </div>
                         </div>
-                        <!--Content Column-->
+
                         <div class="content-column col-lg-6">
                             <h3><span class="orange-text">Deal</span> of the month</h3>
                             <h4>Hikan Strwaberry</h4>
                             <div class="text">Quisquam minus maiores repudiandae nobis, minima saepe id, fugit ullam similique! Beatae, minima quisquam molestias facere ea. Perspiciatis unde omnis iste natus error sit voluptatem accusant</div>
-                            <!--Countdown Timer-->
+
                             <div class="time-counter">
                                 <div class="time-countdown clearfix" data-countdown="2020/2/01">
                                     <div class="counter-column">
@@ -289,11 +288,11 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section> -->
             <!-- end cart banner section -->
 
             <!-- testimonail-section -->
-            <div class="testimonail-section mt-150 mb-150">
+            <!-- <div class="testimonail-section mt-150 mb-150">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 offset-lg-1 text-center">
@@ -344,11 +343,11 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- end testimonail-section -->
 
             <!-- advertisement section -->
-            <div class="abt-section mb-150">
+            <!-- <div class="abt-section mb-150">
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6 col-md-12">
@@ -369,7 +368,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- end advertisement section -->
 
             <!-- shop banner -->
