adding book covers, still need text

--- a/index.html
+++ b/index.html
@@ -398,17 +398,17 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="single-latest-news">
                                 <a href="single-news.html">
-                                    <div class="latest-news-bg news-bg-1">
-                                        <img src="assets/img/books/are-prisons-obsolete.jpeg" alt="Are Prisons Obsolete? By Angela Davis">
+                                    <div class="book-pic">
+                                        <img class="book-pic" src="assets/img/books/are-prisons-obsolete-2.jpeg" alt="Are Prisons Obsolete? By Angela Davis">
                                     </div>
                                 </a>
                                 <div class="news-text-box">
-                                    <h3><a href="single-news.html">You will vainly look for fruit on it in autumn.</a></h3>
+                                    <h3><a href="single-news.html">Are Prisons Obsolete?</a></h3>
                                     <p class="blog-meta">
-                                        <span class="author"><i class="fas fa-user"></i> Admin</span>
-                                        <span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
+                                        <span class="author"><i class="fas fa-user"></i>Angela Davis</span>
+                                        <span class="date"><i class="fas fa-calendar"></i>Fall 2020</span>
                                     </p>
-                                    <p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
+                                    <p class="excerpt">BRIEF INTRO TO ARE PRISONS OBSOLETE?</p>
                                     <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
                                 </div>
                             </div>
@@ -416,15 +416,17 @@
                         <div class="col-lg-4 col-md-6">
                             <div class="single-latest-news">
                                 <a href="single-news.html">
-                                    <div class="latest-news-bg news-bg-2"></div>
+                                    <div class="book-pic">
+                                        <img style="height:200px; display: block; margin-left: auto; margin-right: auto;" src="assets/img/books/origin-of-others.jpeg" alt="The Origin of Others By Toni Morrison">
+                                    </div>
                                 </a>
                                 <div class="news-text-box">
-                                    <h3><a href="single-news.html">A man's worth has its season, like tomato.</a></h3>
+                                    <h3><a href="single-news.html">The Origin of Others</a></h3>
                                     <p class="blog-meta">
-                                        <span class="author"><i class="fas fa-user"></i> Admin</span>
-                                        <span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
+                                        <span class="author"><i class="fas fa-user"></i>Toni Morrison</span>
+                                        <span class="date"><i class="fas fa-calendar"></i> Winter 2021</span>
                                     </p>
-                                    <p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
+                                    <p class="excerpt">BRIEF INTRO TO BOOK</p>
                                     <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
                                 </div>
                             </div>
@@ -432,15 +434,17 @@
                         <div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
                             <div class="single-latest-news">
                                 <a href="single-news.html">
-                                    <div class="latest-news-bg news-bg-3"></div>
+                                    <div class="book-pic">
+                                        <img class="book-pic" src="assets/img/books/black-brown-bruised.jpeg" alt="Black, Brown, Bruised By Ebony Omotola McGee">
+                                    </div>
                                 </a>
                                 <div class="news-text-box">
-                                    <h3><a href="single-news.html">Good thoughts bear good fresh juicy fruit.</a></h3>
+                                    <h3><a href="single-news.html">Black, Brown, Bruised</a></h3>
                                     <p class="blog-meta">
-                                        <span class="author"><i class="fas fa-user"></i> Admin</span>
-                                        <span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
+                                        <span class="author"><i class="fas fa-user"></i>Ebony Omotola McGee</span>
+                                        <span class="date"><i class="fas fa-calendar"></i>Spring 2021</span>
                                     </p>
-                                    <p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
+                                    <p class="excerpt">INTRO TO Black, Brown, Bruised</p>
                                     <a href="single-news.html" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
                                 </div>
                             </div>
